<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="detail_title">Story Detail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="add_story">Add story</string>
    <string name="add_new_story">Add new story</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_story">Upload story</string>
    <string name="add_story_description">Add story description</string>
    <string name="hello">Hello!</string>
    <string name="subtitle_login">Please login to continue your journey!</string>
    <string name="register_title">Create an account</string>
    <string name="something_wrong">Something Wrong!</string>
    <string name="error_default_message">Error without message</string>
    <string name="empty">Nothing to show!</string>
    <string name="login_process">Login process…</string>
    <string name="register_process">Register process…</string>
    <string name="upload_process">Uploading story…</string>
    <string name="capture_process">Capturing photo…</string>
    <string name="picture_of_story">Picture of Story</string>
    <string name="rotate_camera">Rotate camera</string>
    <string name="open_gallery">Open gallery</string>
    <string name="capture_photo">Capture photo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="picture_of_paper_plane">Picture of paper plane</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="picture_story_from">Picture of story from %s</string>
    <string name="password_error_message">Password must be at least 8 characters long.</string>
    <string name="email_error_message">Please enter a valid email address.</string>
    <string name="name_error_message">Please enter a valid name.</string>
    <string name="story_map">Story Map</string>
    <string name="title_activity_story_map">StoryMapActivity</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="post_my_location">Post my location</string>
    <string name="location_denied">Failed to obtain location because location access permission was denied.</string>
    <string name="location_not_found">Location is not found. Please try again!</string>
    <string name="no_story_with_location">There are no stories that have a location.</string>
    <string name="error_loading_story_map">An error occurred while loading stories. Please try again!</string>
</resources>