<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addstory.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bg_transparent"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:alpha="0.6"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/capture_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_bg_transparent"
        app:layout_constraintTop_toTopOf="@+id/view_bg_transparent" />

    <ImageButton
        android:id="@+id/btn_gallery"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/open_gallery"
        android:src="@drawable/ic_images"
        app:layout_constraintBottom_toBottomOf="@+id/btn_capture"
        app:layout_constraintEnd_toStartOf="@+id/btn_capture"
        app:layout_constraintStart_toStartOf="@+id/view_bg_transparent"
        app:layout_constraintTop_toTopOf="@+id/btn_capture" />

    <ImageButton
        android:id="@+id/btn_rotate_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/rotate_camera"
        android:src="@drawable/ic_camera_rotate"
        app:layout_constraintBottom_toBottomOf="@+id/btn_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_capture"
        app:layout_constraintTop_toTopOf="@+id/btn_capture" />

</androidx.constraintlayout.widget.ConstraintLayout>